2008-02-06  Sankar P  <psankar@novell.com>

	* camel/camel-exchange-store.c: (construct):
	Do not show two junk folders for exchange. 
	Exchange has Actual Junk and not VJunk.

2008-02-05  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #436628

	* storage/exchange-component.c: (exchange_component_init):
	Do not start in offline by default, but read from gconf user's choice.

2008-01-29  Srinivasa Ragavan  <sragavan@novell.com>

	* configure.in: Version bump for 2.21.91

2008-01-29  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.21.90 releae.

2008-01-29  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #501295

	* addressbook/e-book-backend-exchange.c: (build_cache),
	(update_cache), (e_book_backend_exchange_create_contact),
	(e_book_backend_exchange_modify_contact),
	(e_book_backend_exchange_remove_contacts),
	(e_book_backend_exchange_dispose), (e_book_backend_exchange_init):
	Create locks around the cache so that the file is protected well not
	to crash.

2008-01-21  Matthew Barnes  <mbarnes@redhat.com>

	* configure.in:
	Require camel-1.2 >= 2.21.90 for
	camel_session_build_password_prompt().

	* camel/camel-exchange-store.c (camel_exchange_get_password):
	Use camel_session_build_password_prompt() to build a consistently
	worded prompt message for the password dialog.

2008-01-19  Matthew Barnes  <mbarnes@redhat.com>

	* configure.in:
	Bump some additional package requirements for libsoup-2.4:
		libbonobo-2.0 >= 2.20.3
		glib-2.0 >= 2.15.3

2008-01-15  Dan Winship  <danw@gnome.org>

	* addressbook/e-book-backend-exchange.c:
	* calendar/e-cal-backend-exchange-calendar.c: 
	* calendar/e-cal-backend-exchange-tasks.c: 
	* mail/mail-stub-exchange.c: Update for libsoup 2.4, and related
	libexchange changes.

2008-01-14  Srinivasa Ragavan  <sragavan@novell.com>

	* configure.in: Version bump to 2.21.90

2008-01-14  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.21.5 release
