@@ -1,3 +1,15 @@
+2008-02-07  Milan Crha  <mcrha@redhat.com>
+
+	** Fix for bug #420503
+
+	* mail/mail-stub-exchange.c: (process_flags):
+	Use copies of URLs, because we unlock owner so it can be freed.
+
+	** Patch from Srinivasa Ragavan and Bharath Acharya:
+	* mail/mail-stub-exchange.c: (message_remove_at_index),
+	(change_message):
+	Better locks using; the changed_messages array should be unique.
+
 2008-02-06  Sankar P  <psankar@novell.com>
 
 	* camel/camel-exchange-store.c: (construct):
